--- a/singolo1.css
+++ b/singolo1.css
@@ -5,10 +5,12 @@
 }
 
 .wrapper {
-	width: 1020px;
+	max-width: 1020px;
 	padding: 0 40px;
     margin: 0 auto;
     box-sizing: border-box;
+    height: 100%;
+    position: relative;
 }
 
 header {
@@ -32,7 +34,7 @@ h1 {
 	color: #ffffff;
 	font-family: "Lato";
 	font-weight: 700;
-    letter-spacing: -1.1px;
+    letter-spacing: -0.7px;
     text-transform: uppercase;
 }
 
@@ -41,38 +43,27 @@ h1::after {
     color: #f06c64;
 }
 
-nav {
+.navbar {
     margin-right: -6px;
     margin-top: 10px;
-}
-
-.navbar {
     text-transform: uppercase;
-    padding: 0;
-    list-style-position: inside;
-	list-style: none;
 	font-size: 12px;
-	line-height: 6px;
+	line-height: 8px;
 	font-family: "Lato";
 	font-weight: 700;
 	display: flex;
-    letter-spacing: 0px;
+    letter-spacing: 0.2px;
 }
 
 .colored_nav {
 	color: #f06c64;
 }
 
-.navbar li span {
+span {
     margin-left: 10px;
     margin-right: 2px;
-	padding-left: 18px;
-    list-style-position: inside;
+	padding-left: 3px;
     transition: color, 0.5s;
-}
-
-span {
-    text-decoration: none;
 	cursor: pointer;
 	color: #f06c64;
 	line-height: 12px;
@@ -139,7 +130,7 @@ main {
 }
 
 .services {
-    padding: 62px 0 31px;
+    padding: 64px 0 31px;
     background-color: #f2f2f2;
     border-bottom: 6px solid #ffffff;
     height: 501px;
@@ -174,9 +165,9 @@ main {
 
 .element {
     margin-bottom: 32px;
-    width: 24%;
+    width: 23%;
     max-width: 299px;
-    max-height: 93px;
+    max-height: 110px;
     padding-left: 79px;
     overflow: hidden;
     position: relative;
@@ -212,6 +203,5 @@ main {
     text-align: justify;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
-    word-spacing: 0.8px;
-    text-align: left;
+    letter-spacing: 0.1px;
 }
