--- a/singolo1.css
+++ b/singolo1.css
@@ -13,7 +13,7 @@
     position: relative;
 }
 
-header {
+header .first {
 	height: 95px;
 	background-color: #2d303a;
 	border-bottom: 6px solid #323746;
@@ -21,7 +21,7 @@ header {
 	padding: 32px 0 32px;
 }
 
-.header_layout {
+.header_layout_first {
 	display: flex;
 	align-items: baseline;
 	justify-content: space-between;
@@ -137,7 +137,7 @@ main {
     box-sizing: border-box;
 }
 
-.title {
+.services_title {
     margin-bottom: 28px;
     line-height: 18px;
     font-size: 30px;
@@ -147,7 +147,7 @@ main {
     font-family: "Lato", sans-serif;
 }
 
-.description {
+.services_description {
     margin-bottom: 45px;
     font-family: "Lato", sans-serif;
     font-size: 18px;
@@ -163,7 +163,7 @@ main {
     justify-content: space-between;
 }
 
-.element {
+.services_element {
     margin-bottom: 32px;
     width: 23%;
     max-width: 299px;
